--- a/proxy/proxy/History.txt
+++ b/proxy/proxy/History.txt
@@ -80,3 +80,48 @@ Britney Spears, Show, 27.03.2023 23:13:56, All colection, [2, toyota, camry, AO8
 
 Admin Admin, Show, 27.03.2023 23:15:34, All colection, Your collection is empty!
 
+Taylor Swift, Show, 04.04.2023 0:39:01, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Taylor Swift, Search, 04.04.2023 0:39:10, Search by "toy" [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000] [3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000]
+
+Taylor Swift, Search, 04.04.2023 0:40:27, Search by "toy" [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000] [3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000]
+
+Taylor Swift, Show, 04.04.2023 0:40:32, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Taylor Swift, ShowById, 04.04.2023 0:41:00, Id: 2 [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000]
+
+Admin Admin, Show, 04.04.2023 0:41:29, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Admin Admin, Edit, 04.04.2023 0:41:44, 2 previous: 2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+
+Admin Admin, Show, 04.04.2023 0:42:00, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Lady Gaga, Sort, 04.04.2023 0:50:51, Sort by Model [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Lady Gaga, Show, 04.04.2023 0:51:04, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Lady Gaga, Edit, 04.04.2023 0:53:36, Attempt to complete action without appropriate level of priority
+
+Selene Gomez, Show, 04.04.2023 0:54:26, [2, toyota, camry, AO8788AK, 2021/12/13, 2022/01/01, 3000000
+3, toyota, corolla, AO8789AK, 2020/09/09, 2022/07/11, 31000000
+1, bmw, q7, BC1234BD, 2020/10/12, 2022/12/12, 2000000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
