--- a/task5/task5/History.txt
+++ b/task5/task5/History.txt
@@ -142,3 +142,142 @@ Manager Manager, ShowModerated, 25.04.2023 20:47:36, [1, bmw, x5, AO5414LR, 2012
 
 Manager Manager, Show, 25.04.2023 20:47:38, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000]
 
+Manager Manager, Show, 26.04.2023 10:14:52, []
+
+Manager Manager, ShowDrafts, 26.04.2023 10:15:00, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Manager Manager, Moderation, 26.04.2023 10:15:11, 
+
+Manager Manager, Show, 26.04.2023 10:15:17, []
+
+Manager Manager, ShowDrafts, 26.04.2023 10:15:19, [1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Manager Manager, ShowModerated, 26.04.2023 10:15:22, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000]
+
+Manager Manager, Logout, 01.01.0001 0:00:00, User Manager Manager is not active
+
+Admin Admin, Publishing, 26.04.2023 10:15:48, 2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+
+Admin Admin, Show, 26.04.2023 10:15:53, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000]
+
+Admin Admin, ShowDrafts, 26.04.2023 10:15:55, [1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Admin Admin, Publishing, 26.04.2023 10:15:57, 
+
+Admin Admin, Show, 26.04.2023 10:16:03, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000]
+
+Admin Admin, Logout, 01.01.0001 0:00:00, User Admin Admin is not active
+
+Manager Manager, Moderation, 26.04.2023 10:16:36, 2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+
+Manager Manager, Show, 26.04.2023 10:16:41, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000]
+
+Manager Manager, ShowDrafts, 26.04.2023 10:16:44, []
+
+Manager Manager, ShowModerated, 26.04.2023 10:16:46, [8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Manager Manager, Show, 03.05.2023 10:05:14, []
+
+Manager Manager, ShowDrafts, 03.05.2023 10:05:19, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Manager Manager, Moderation, 03.05.2023 10:05:29, 
+
+Manager Manager, Logout, 01.01.0001 0:00:00, User Manager Manager is not active
+
+Admin Admin, Show, 03.05.2023 10:06:17, []
+
+Admin Admin, ShowModerated, 03.05.2023 10:06:22, [1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000]
+
+Admin Admin, ShowDrafts, 03.05.2023 10:06:27, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Admin Admin, Publishing, 03.05.2023 10:06:35, 2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+
+Admin Admin, Show, 03.05.2023 10:06:43, [1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000]
+
+Admin Admin, ShowDrafts, 03.05.2023 10:06:45, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000]
+
+Admin Admin, ShowModerated, 03.05.2023 10:06:49, []
+
+Admin Admin, Logout, 01.01.0001 0:00:00, User Admin Admin is not active
+
+Manager Manager, Edit, 03.05.2023 10:07:43, 0
+
+Manager Manager, Edit, 03.05.2023 10:07:51, 1 previous: 1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000 new: 1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+
+Manager Manager, Edit, 03.05.2023 10:08:34, 1 previous: 1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000 new: 1, bmw, x5, AO8878AK, 2012/12/13, 2013/02/13, 2200000
+
+Manager Manager, Show, 03.05.2023 10:08:53, []
+
+Manager Manager, ShowDrafts, 03.05.2023 10:08:58, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+1, bmw, x5, AO8878AK, 2012/12/13, 2013/02/13, 2200000]
+
+Manager Manager, AddInto, 03.05.2023 10:09:10, 3 toyota corolla BC4835RT 2018/12/12 2022/12/12 34000000 [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+1, bmw, x5, AO8878AK, 2012/12/13, 2013/02/13, 2200000
+3, toyota, corolla, BC4835RT, 2018/12/12, 2022/12/12, 34000000]
+
+Manager Manager, ShowDrafts, 03.05.2023 10:09:53, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+1, bmw, x5, AO8878AK, 2012/12/13, 2013/02/13, 2200000
+3, toyota, corolla, BC4835RT, 2018/12/12, 2022/12/12, 34000000]
+
+Manager Manager, Logout, 01.01.0001 0:00:00, User Manager Manager is not active
+
+Admin Admin, Publishing, 03.05.2023 10:10:21, 
+
+Admin Admin, Publishing, 03.05.2023 10:10:28, 
+
+Admin Admin, Publishing, 03.05.2023 10:10:36, 
+
+Admin Admin, Show, 03.05.2023 10:10:49, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO8878AK, 2012/12/13, 2013/02/13, 2200000]
+
+Admin Admin, ShowDrafts, 03.05.2023 10:10:51, [8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+3, toyota, corolla, BC4835RT, 2018/12/12, 2022/12/12, 34000000]
+
+Manager Manager, Publishing, 03.05.2023 10:15:29, Attempt to complete action without appropriate level of priority
+
+Manager Manager, AddInto, 03.05.2023 10:15:38, 4 toyota corolla AO9876AK 2020/12/12 2021/12/12 20000 [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+4, toyota, corolla, AO9876AK, 2020/12/12, 2021/12/12, 20000]
+
+Manager Manager, ShowDrafts, 03.05.2023 10:16:08, [2, toyota, camry, BV5414MR, 2002/12/13, 2004/02/13, 200000
+1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+8, audi, q8, BC1234RT, 2016/12/13, 2019/02/13, 9000000
+4, toyota, corolla, AO9876AK, 2020/12/12, 2021/12/12, 20000]
+
+Manager Manager, Moderation, 03.05.2023 10:16:21, 
+
+Manager Manager, Moderation, 03.05.2023 10:16:30, 
+
+Manager Manager, ShowModerated, 03.05.2023 10:16:35, [1, bmw, x5, AO5414LR, 2012/12/13, 2013/02/13, 2200000
+4, toyota, corolla, AO9876AK, 2020/12/12, 2021/12/12, 20000]
+
+Manager Manager, Logout, 01.01.0001 0:00:00, User Manager Manager is not active
+
+Admin Admin, Publishing, 03.05.2023 10:17:05, 
+
+Admin Admin, Show, 03.05.2023 10:17:12, [4, toyota, corolla, AO9876AK, 2020/12/12, 2021/12/12, 20000]
+
+Admin Admin, Logout, 01.01.0001 0:00:00, User Admin Admin is not active
+
+Tetiana Stoyko, Show, 03.05.2023 10:17:54, [4, toyota, corolla, AO9876AK, 2020/12/12, 2021/12/12, 20000]
+
